[package]
name = "pico-rtc-display"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.77"

[dependencies]
defmt = { version = "0.3.8"}
defmt-rtt = "0.4.1"
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
embedded-hal = { version = "1.0.0" }
embedded-graphics = "0.8.1"
ssd1306 = "0.8.1"
u8g2-fonts = { version = "0.4.0", features = ["embedded_graphics_textstyle"] }

cfg-if = "1.0"
ds1302-drv = {version = "0.4.1", default-features = false, features = ["rp2040"]}
fugit = "0.3.7"
nb = "1.1.0"
rp2040-hal = {version = "0.10.2", features = ["critical-section-impl", "rt", "defmt"]}
panic-halt = "0.2.0"
heapless = "0.6.0"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = "z"
overflow-checks = false
strip = true

